infrastructure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: innovcrm
  labels:
    app: innovcrm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: innovcrm
  template:
    metadata:
      labels:
        app: innovcrm
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: innovcrm
        image: kpmrafeeq/innovcrm:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
