infrastructure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: innovcrm
  labels:
    app: innovcrm
spec:
  selector:
    app: innovcrm
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
